# fastapi_microservice_lambda

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  app.db  bitbucket-pipelines.yml  docker-compose.yml  fastapi_opensearch_handler.py  pyproject.toml  pytest.ini  requirements.txt  requirements_lint.txt
alembic/: env.py
alembic/versions/: 2023-11-17_22-47-50_db_init.py
app/: lambda_handler.py  main.py  requirements.txt
app/api/: deps.py  external_api.py  internal_api.py
app/api/internal/: aws.py  example.py
app/db/: base.py  base_class.py  deps.py  session.py
app/exceptions/: generic.py
app/helpers/: log_filters.py  log_handlers.py
app/middlewares/: logging_middleware.py
app/models/: example.py
app/providers/: __init__.py
app/repositories/: base.py
app/schemas/: __init__.py  base.py  types.py
app/schemas/internal/: example_output.py
app/services/: example_service.py
app/settings/: db_settings.py  open_search_logs_settings.py  project_settings.py
tests/: conftest.py  requirements.txt
tests/events/internal/: example.json
tests/unit/: fixtures.py  test_handler.py
